make sdk cross platform

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-something in here for the body
+Devless SDK
 </body>
 <script type="text/javascript" src="../dv_sdk.js"></script>
 </html>
