--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,6 @@
 <body>
 Devless SDK
 </body>
-<script type="text/javascript" src="../dv_sdk.js"></script>
+<script type="text/javascript" src="../dv_sdk.min.js"></script>
 </html>
 
