created and run test successfully, added a minified version for production too

--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,8 @@
 <body>
 Devless SDK
 </body>
+
 <script type="text/javascript" src="../dv_sdk.min.js"></script>
+<script type="text/javascript" src="test.js"></script>
 </html>
 
